# kuria

doraiba/: .gitignore  CMakeLists.txt  build_radar_pub_sub.sh  doraiba_test.sh  readme.md  x4_config.txt
doraiba/include/: 8051_firmware.h  base64.h  dispatch_radar_frame.h  gpio_hal.h  kuria_config.h  kuria_utils.h  novelda.pb.h  novelda_protobuf.h  radar_data_format.h  spidriver.h  x4driver.h
doraiba/src/: base64.c  dispatch_radar_frame.c  gpio_hal.c  hlo_notify.c  kuria_utils.c  novelda.pb.c  novelda_protobuf.c  radar_subscriber.c  radar_task.c  spidriver.c  x4driver.c
doraiba/zmq_test/: CMakeLists.txt  doitall.sh
haltija/: CMakeLists.txt  haltijanetworkrunner.cpp  haltijarunner.cpp  noveldapublisher.cpp
haltija/algorithm/: activity.cpp  activity.h  circbuf.h  debug_publisher.cpp  debug_publisher.h  ekf.h  filters.h  haltija_types.h  haltijamath.cpp  haltijamath.h  novelda_radar_subscriber.cpp  novelda_radar_subscriber.h  pca.h  peakFinding.cpp  peakFinding.h  peakFinding.hpp  peakFindingcopy.cpp  preprocessor.cpp  preprocessor.h  preprocessorIIR.cpp  preprocessorIIR.h  preprocessor_interface.h  rangebincombiner.cpp  rangebincombiner.h  respiration.cpp  respiration_classifier.cpp  respiration_classifier.h  respiration_segmenter.cpp  respiration_segmenter.h
haltija/algorithm/hmm/: AllModels.cpp  AllModels.h  HmmHelpers.cpp  HmmHelpers.h  HmmPdfInterface.h  HmmTypes.h  LogMath.h  MatrixHelpers.cpp  MatrixHelpers.h
haltija/cmake/: FindEigen3.cmake  FindModuleConnector.cmake
haltija/debugutils/: baseband_publisher.py  networkrunner.yml  novelda_data_file_to_mat.py  novelda_pb2.py  novelda_publish_to_file.py  novelda_publisher.py  plot_debug_publisher.py  publisher.yml  radar_messages_pb2.py  readme.txt  realtime_plotter.py  realtime_plotter_requirements.txt  zmqclient.c
haltija/debugutils/filter_design/: complex_bandpass.py
haltija/include/: debug_publisher_interface.h  haltija_types.h  log.h  radar_result_publisher_interface.h
haltija/mateigen/: matlabreader.cpp  matlabwriter.cpp  matlabwriter.h
haltija/matio/: .travis.yml  CMakeLists.txt  matio.h  matio.pc  matio_private.h  snprintf.c
haltija/matio/documentation/: Makefile
haltija/matio/src/: mat73.c  matioConfig.h  matvar_cell.c  read_data.c
haltija/matio/test/: Makefile  atconfig
haltija/matio/tools/: Makefile
haltija/network/: novelda.pb.c  novelda.pb.h  noveldaprotobuf.cpp  noveldaprotobuf.h  proto_utils.c  proto_utils.h  protobuf_matrix_utils.c  protobuf_matrix_utils.h  radar_messages.pb.c  radar_messages.pb.h  radarmessageprotobuf.cpp  radarmessageprotobuf.h  simple_matrix.pb.c  simple_matrix.pb.h  zmq_publisher.h  zmq_subscriber.h
haltija/src/: example.cpp  example.h  filters.h  haltija_types.h  haltijamath.cpp  haltijamath.h  matlabhelper.cpp  matlabhelper.h  matlabreader.cpp  matlabreader.h  matlabwriter.cpp  matlabwriter.h  pca.cpp  pca.h  preprocessor.cpp  preprocessor.h  respiration.cpp  respiration.h
haltija/unit-test/: testbuffers.cpp  testfilter.cpp  testmatio.cpp  testmatrixmath.cpp  testnetwork.cpp  testpreprocessor.cpp  testradar1.cpp
haltija/unit-test/test-data/: RecFrames_subset.csv  RecX4_BB_Frames_20161028_170759.mat  RecX4_BB_Frames_subset.mat  framesAfterMTIPython.mat  framesBeforeMTI.mat  j.csv  make_simple_matrix.py  test1.mat  test1ref.csv
haltija/winlib/hdf5/: hdf5.lib
haltija/winlib/hdf5/include/: H5pubconf.h
kuria-rpi-proto/: CMakeLists.txt  main  main.c  run_kuria.sh  spidriver.c  spidriver.h  x4driver.h
kuria-rpi-proto/include/: 1:b1  FreeRTOSConfig.h  dispatch_radar_frame.h  file_save.h  hlo_notify.h  hlo_queue.h  kuria_config.h  kuria_utils.h  memorypool.h  novelda_protobuf.h  portmacro.h  radar_data_format.h  radar_task.h  spidriver.h  task_radar.h  xep_dispatch_messages.h
kuria-rpi-proto/src/: dispatch_radar_frame.c  file_save.c  hlo_notify.c  hlo_queue.c  kuria_utils.c  main.c  memorypool.c  memorypoolset.c  novelda_protobuf.c  radar_publisher.c  radar_subscriber.c  radar_task.c  spidriver.c  x4driver.c  xep_dispatch.c  xep_dispatch_messages.c  xtsemaphore_xep.c
kuria-rpi-proto/zmq_test/: doitall.sh  test_pub.c  test_sub.c  zmq_endpoint.h
novelda/: XTWAGetFrame.m  XTWATest.m  radar_respiration_rawdata.xml
novelda/XethruWinAcquisition/Windows/: make_qt_deploy.bat  radar.xml  settings.ini
x4fwv1.0.3-rc2/: 8051_firmware.h  x4driver.c
xtXEP_source-0/xtSerial/src/: protocol.c  protocol.h  protocol_host_parser.c  protocol_host_parser.h  protocol_parser.c  protocol_parser.h  protocol_target.c  protocol_target.h  xtid.h  xtserial_definitions.h
xtXEP_source-0/xtXEP/doc/output/html/: 8051__firmware_8h.xhtml  8051__firmware_8h_source.xhtml  _free_r_t_o_s__hooks_8c.xhtml  _free_r_t_o_s__hooks_8c__incl.map  _free_r_t_o_s__hooks_8c__incl.md5  _free_r_t_o_s__hooks_8c_a95466c46b87dabee6ba956ad42d61fe3_cgraph.md5  _free_r_t_o_s__hooks_8c_a97fd430f36f8b065226e2bff9bad1de5_icgraph.md5  _free_r_t_o_s__hooks_8c_ab7e5c95cf72a3f819bc4462a7fb62ca3_cgraph.md5  _free_r_t_o_s__hooks_8c_ab7e5c95cf72a3f819bc4462a7fb62ca3_icgraph.md5  _free_r_t_o_s__hooks_8h.xhtml  _free_r_t_o_s__hooks_8h_a95466c46b87dabee6ba956ad42d61fe3_cgraph.md5  (+1511 more)
xtXEP_source-0/xtXEP/doc/src/: XEP.md  XEP_HAL_API.md  XEP_application.md  XEP_memory.md  XEP_xdriver.md
xtXEP_source-0/xtXEP/include/: xep_dispatch.h  xep_hal.h  xtmemory.h  xttoolbox.h
xtXEP_source-0/xtXEP/projects/xep_x4m0x_s70/: xep_x4m0x_s70.cproj
xtXEP_source-0/xtXEP/src/: FreeRTOS_hooks.c  build.h  main.c  version.h  xep.make
xtXEP_source-0/xtXEP/src/Dispatch/: memorypool.c  xep_dispatch.c
xtXEP_source-0/xtXEP/src/HostCom/: task_hostcom.c  task_hostcom.h
xtXEP_source-0/xtXEP/src/Radar/: task_radar.c
xtXEP_source-0/xtXEP/src/System/: task_monitor.c  task_monitor.h
xtXEP_source-0/xtXEP/src/Tools/: xtmemory_xep.c  xttoolbox.c
xtXEP_source-0/xtXEP/src/XDriver/: 8051_firmware.h  x4driver.c  x4driver_unittest.cpp
xtXEP_source-0/xtXEP/src/XEPA/: module_ui.c  xep_application.c  xep_application_mcp_callbacks.c  xep_application_mcp_callbacks.h
xtXEP_source-0/xtXEP/src/hal/: radar_hal.c  radar_hal.h  xt_new_delete.cpp
(+162 files in other folders)
